Fixed extra spaces

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
-
+.main-cont{
+    max-width: 1300px;
+    margin: auto;
+}
 
 .header{
     width: 100%;
@@ -92,9 +95,6 @@
     align-items: center;
 }
 
-.container{
-    padding: 0px;
-}
 
 
 .story{
@@ -279,6 +279,10 @@
 
 
 @media (max-width: 1000px){
+    .main-cont{
+        width: 100%;
+        
+    }
     .hidden-nav{
         display: flex;
         justify-content: space-between;
